--- a/menuserver/values.yaml
+++ b/menuserver/values.yaml
@@ -1,5 +1,10 @@
 replicaCount: 2
+uiReplicaCount: 1
 servicePort: 8080
-ports:
+backendServiceName: menuserver-backend-service
+backendPorts:
 - port: 8888
   targetPort: 8080
+frontendPorts:
+- port: 8888
+  targetPort: 3000
