--- a/menuserver/Chart.yaml
+++ b/menuserver/Chart.yaml
@@ -24,7 +24,7 @@ version: 0.1.0
 appVersion: "1.16.0"
 
 
-#dependencies:
-#- name: postgresql
-#  version: "10.12.2"
-#  repository: "https://charts.bitnami.com/bitnami"
+dependencies:
+- name: postgresql
+  version: "10.12.2"
+  repository: "https://charts.bitnami.com/bitnami"
