--- a/locanta-fe/templates/service.yaml
+++ b/locanta-fe/templates/service.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "locanta-fe.fullname" . }}
+  name: {{ .Values.service.name }}
+  namespace: {{ .Values.namespace }}
   labels:
-    {{- include "locanta-fe.labels" . | nindent 4 }}
+    app: locanta
+    type: locanta-svc
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +14,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "locanta-fe.selectorLabels" . | nindent 4 }}
+    {{- toYaml .Values.deployment.pod.labels | nindent 4 }}
