--- a/base/values.yaml
+++ b/base/values.yaml
@@ -1,4 +1,3 @@
-
 namespace: default
 
 deployment:
@@ -17,4 +16,6 @@ deployment:
 service:
   name: locanta-fe-svc
   type: ClusterIP
-  port: 80
+  ports:
+  - port: 80
+    targetPort: 8080
