add password to postgre

--- a/infra/values.yaml
+++ b/infra/values.yaml
@@ -1,4 +1,4 @@
 postgresql:
   postgresqlUsername: postgres
   postgresqlDatabase: postgres
-  #postgresqlPassword: mahmut123
+  postgresqlPassword: 5a/V3F@P=/_TyRVd
