--- a/sources/base/templates/deployment.yaml
+++ b/sources/base/templates/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+:apiVersion: apps/v1
 kind: Deployment
 metadata:
     name: {{ .Values.deployment.name }}
@@ -14,6 +14,7 @@ spec:
   template:
     metadata:
       labels:
+	date: "{{ now | unixEpoch }}"
         {{- toYaml .Values.deployment.pod.labels | nindent 8 }}
     spec:
       containers:
