--- a/sources/base/templates/deployment.yaml
+++ b/sources/base/templates/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     labels:
        app: locanta
        type: locanta-dep
+       date: "{{ now | unixEpoch }}"
 spec:
   replicas: {{ .Values.deployment.replicaCount }}
   selector:
